keycolor = shared_module('keycolor', 'keycolor.cpp',
    dependencies: [wayfire],
    install: true, install_dir: join_paths(get_option('libdir'), 'wayfire'))

rounded_corners = shared_module('rounded-corners', 'rounded-corners.cpp',
    dependencies: [wayfire, wlroots],
    install: true, install_dir: join_paths(get_option('libdir'), 'wayfire'))

window_zoom = shared_module('winzoom', 'window-zoom.cpp',
    dependencies: [wayfire],
    install: true, install_dir: join_paths(get_option('libdir'), 'wayfire'))
